<resources>
    <string name="app_name">The Lord of the Rings</string>
    <string name="home_title">Home</string>
    <string name="movies_title">Movies</string>
    <string name="default_error">Unknown error</string>
    <string name="book_count">%d books</string>
    <string name="movie_count">%d movies</string>
    <string name="enter_your_name">Enter your name here!</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="hello_name">Hello %s</string>
    <string name="movie_score">Score: %.2f</string>
    <string name="movie_runtime">Runtime: %d min</string>
    <string name="runtime_in_min">%d min</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="rotten_tomattoes_score">Rotten Tomattoes Score</string>
    <string name="awards">Awards</string>
    <string name="movie_budget">%d mil</string>
    <string name="movie_revenue">%.2f mil</string>
    <string name="movie_awards">%d awards</string>
    <string name="nominations">Nominations</string>
    <string name="movie_nominations">%d nominations</string>
    <string name="name">Name</string>
    <string name="search_title">Search…</string>
    <string name="search_hint">Search by character…</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="unsorted">Unsorted</string>
    <string name="score">Score</string>
    <string name="sort_type">Sort type</string>
    <string name="sort_by">Sort by</string>
    <string name="details_tab_text">Details</string>
    <string name="quotes_tab_text">Quotes</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_couldnt_reach_server">\"Oops! Couldn\'t reach server. Check your internet connection.\"</string>
    <string name="oops_something_went_wrong">\"Oops! Something went wrong. Please try again.\"</string>
    <string name="error_couldnt_load_all_quotes">Couldn\'t load all quotes</string>
    <string name="error_couldnt_load_all_books">Couldn\'t load the books</string>
    <string name="error_couldnt_load_the_character">Couldn\'t load the character</string>
    <string name="error_couldnt_load_the_movie">Coldn\'t load the movie</string>
    <string name="error_couldnt_load_movies">Couldn\'t load movies</string>
    <string name="error_couldnt_load_characters">Couldn\'t load characters</string>
    <string name="no_items_to_show_message">No items to show</string>
    <string name="network_available_message">Network is available again</string>
    <string name="network_unavailable_message">Network is unavailable</string>
    <string name="network_lost_message">Network connection is lost</string>
</resources>